objects/DonorPaymentMethod__c.object
<CustomObject>
    <label>Donor Payment Method</label>
    <nameField>
        <label>Donor Payment Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donor Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>DonorPaymentMethod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>donorId__c</fullName>
        <label>donorId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FourDegit__c</fullName>
        <label>FourDegit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <label>Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Expiration_Date__c</fullName>
        <label>Card Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>donor_payment_method_id__c</fullName>
        <externalId>true</externalId>
        <label>donor payment method id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>donor_payment_method_id__c</columns>
        <columns>donorId__c</columns>
        <columns>FourDegit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>